--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "node --no-warnings node_modules/jest/bin/jest.js --coverage"
+    "test": "node --no-warnings node_modules/jest/bin/jest.js "
   },
   "dependencies": {
     "react": "^18.3.1",
