--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "eslint": "^8.57.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nprogress": "^0.2.0",
+    "puppeteer": "^18.1.0",
     "vite": "^5.3.1"
   }
 }
