--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "node --no-warnings node_modules/jest/bin/jest.js "
   },
   "dependencies": {
+    "atatus-spa": "^4.6.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
