--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "atatus-spa": "^4.6.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
