--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://tannazmehr.github.io/meet",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "node --no-warnings node_modules/jest/bin/jest.js "
+    "test": "node --no-warnings node_modules/jest/bin/jest.js ",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "atatus-spa": "^4.6.4",
@@ -32,6 +35,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-cucumber": "^4.5.0",
