--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meet",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://tannazmehr.github.io/meet",
